--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.8.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-materialize": "^1.0.14",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "uglifyjs-webpack-plugin": "^0.4.6",
