--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^4.11.10",
     "morgan": "^1.8.2",
     "react": "^15.6.1",
+    "react-alert": "^2.3.0",
     "react-dom": "^15.6.1",
     "react-materialize": "^1.0.14",
     "react-router": "^4.2.0",
