--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-materialize": "^1.0.14",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "textmagic-rest-client": "0.0.5",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.5.5",
     "webpack-merge": "^4.1.0"
