--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
+    "moment": "^2.18.1",
     "mongoose": "^4.11.10",
     "morgan": "^1.8.2",
     "react": "^15.6.1",
