added heroku-postbuild step in package.json to take care of webpack building instead of doing it every time npm start was run, which caused a huge delay in load time before. also changed webpack middleware condition to ===development in server.js

--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev-noserver": "webpack-dev-server --open --config webpack.dev.js",
-    "dev": "node server.js",
-    "build": "webpack --config webpack.prod.js",
-    "start": "npm run build && node server.js"
+    "dev-build": "webpack --config webpack.dev.js",
+    "dev": "set NODE_ENV=development&& node server.js",
+    "heroku-postbuild": "webpack --config webpack.prod.js",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
