--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react": "^15.6.1",
-    "react-alert": "^2.3.0",
+    "react-alert": "2.3.0",
     "react-dom": "^15.6.1",
-    "react-materialize": "^1.0.14",
+    "react-materialize": "1.0.14",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "textmagic-rest-client": "0.0.5",
